--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💚 Suhail's Personal Site</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <table cellspacing="20">
@@ -15,10 +16,6 @@
                 <p>I am a web developer and C programmer. I love coffee.</p> </td>
         </tr>
     </table>
-    <!--<img src="./suhail_ahmed.jpg" alt="Suhail FB Profile">
-    <h1>Suhail Ahmed</h1>
-    <p> <em>Student at <a href="https://www.rymec.in/"><strong> RYMEC College</strong></a> </em></p>
-    <p>I am a web developer and C programmer. I love coffee.</p> -->
     <hr>
     <h3>Education</h3>
     <ul>
@@ -65,9 +62,6 @@
         </tr>
     </table>
 
-    <!--<p>C-Language ⭐️⭐️⭐️⭐️</p>
-    <p>Photo-Editing ⭐️⭐️⭐️⭐️⭐️</p>
-    <p>Web Development ⭐️⭐️⭐️</p> -->
     <a href="my hobbies.html">My Hobbies</a>
     <a href="contact me.html">contact me</a>
 </body>
