--- a/contact me.html
+++ b/contact me.html
@@ -7,7 +7,7 @@
     <title>Contact Me</title>
 </head>
 <body>
-    <h3>My Hobbies</h3>
+    <h3>My Contact Details</h3>
     <ul>
         <li>City: bellary</li>
         <li>Suhailahmed7026@gmail.com</li>
