--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="./suhail_ahmed.jpg" alt="Suhail FB Profile" width="120" height="150"></td>
+            <td><img src="./IMG_20210729_183512-modified.png" alt="Suhail Profile" width="150" height="158"></td>
             <td>    <h1>Suhail Ahmed</h1>
                 <p> <em>Student at <a href="https://www.rymec.in/"><strong> RYMEC College</strong></a> </em></p>
                 <p>I am a web developer and C programmer. I love coffee.</p> </td>
